fix(user): base the last-instructor guard on operational fichas